Spellchecker is at least partially enabled when it shouldn't be
Categories
(Core :: DOM: Editor, defect, P2)
Tracking
()
| Tracking | Status | |
|---|---|---|
| firefox112 | --- | fixed |
People
(Reporter: smaug, Assigned: smaug)
Details
Attachments
(2 files)
... and this slows down CodeMirror quite a bit in some cases
| Assignee | ||
Comment 1•3 years ago
|
||
Hmm, or changes to spellcheck attribute aren't handle properly. If spellchecker is enabled initially and then disabled, existing spellcheck ranges stay around
| Assignee | ||
Comment 2•3 years ago
|
||
Testcase
data:text/html,<div contenteditable onfocus='setTimeout("document.body.firstChild.spellcheck = false;", 5000)'>focus this contenteditable and misspell something and keep writing </div>
Spellchecking stops on the newly typed text eventually, but the existing ranges stay around. They probably shouldn't (and they affect performance).
| Assignee | ||
Comment 3•3 years ago
|
||
Or am I wrong? Perhaps the ranges are gone but the text just isn't repainted?
Comment 4•3 years ago
|
||
(In reply to Olli Pettay [:smaug][bugs@pettay.fi] from comment #1)
Hmm, or changes to spellcheck attribute aren't handle properly. If spellchecker is enabled initially and then disabled, existing spellcheck ranges stay around
It's tried. It's called if the editor already has a specllchecker before disabling spell-check when spellcheck attribute is changed.
Comment 5•3 years ago
|
||
You can currently see the described behavior at https://bgrins.github.io/editor-tests/ but for a more permanent reference I made a more minimal STR using npm run build from this directory https://github.com/bgrins/editor-tests/blob/b62dbff4cecb57ef4223438af27351eee98478e6/codemirror_str/index.html. I'm attaching the resulting zip with an index.html & a single JS file. Opening the page and pressing "Run" I get the following profile https://share.firefox.dev/3xhSEhg
| Assignee | ||
Comment 6•3 years ago
|
||
https://searchfox.org/mozilla-central/rev/1d6e2f82287c298f77f21ad0f62f1aed6155577c/editor/libeditor/EditorBase.cpp#1927 is the problem. It returns true because of https://searchfox.org/mozilla-central/rev/1d6e2f82287c298f77f21ad0f62f1aed6155577c/editor/libeditor/EditorBase.cpp#565-571
It is hard to not return true there. One may have multiple contenteditables.
But I'll upload a patch which helps quite a bit in some common cases. No need to create ranges so often.
Comment 7•3 years ago
|
||
HTMLEditor::IsActiveInDOMWindow() could be useful to check what you want.
| Assignee | ||
Comment 8•3 years ago
|
||
This is not very optimimal, but tracking spellchecking state in DOM tree is tricky because of multiple contentEditables and possibility to set spellcheck true/false anywhere etc.
At least this helps with the testcase quite a bit.
Comment 9•3 years ago
•
|
||
| wrong-bug | ||
(posted different bug's comment)
Updated•3 years ago
|
Comment 10•3 years ago
|
||
Comment 11•3 years ago
|
||
| bugherder | ||
Description
•